chore: created and passing 13 unit tests

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,10 @@ JWT_SECRET="goK!pusp6ThEdURUtRenOwUhAsWUCLheBazl!uJLPlS8EbreWLdrupIwabRAsiBu"
 # 2. Getting `TELEGRAM_BOT_CHANNEL_ID`
 #    - Send a aleatory message to your new bot you created previously
 #    - Access: `https://api.telegram.org/bot<YOUR_TELEGRAM_BOT_HTTP_TOKEN_HERE>/getUpdates`
-#    - Copy and save: `chat.id` its a number
+#    - Copy and save: `chat.id` -> its a number
 TELEGRAM_BOT_HTTP_TOKEN=123
 TELEGRAM_BOT_CHANNEL_ID=123
+
+ENABLE_DATABASE_DEBUG=true # false
+
+ENABLE_TELEGRAM_LOGS=true # false
