--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@nestjs/throttler": "^6.1.0",
 		"@prisma/client": "^5.18.0",
 		"bcrypt": "^5.1.1",
+		"class-validator": "^0.14.1",
 		"dotenv": "^16.4.5",
 		"helmet": "^7.1.0",
 		"jest-mock-extended": "^3.0.7",
